# lorum

./: Cargo.toml
crates/: README.md
crates/lorum-agent-core/: Cargo.toml
crates/lorum-agent-core/src/: lib.rs
crates/lorum-agent-core/tests/: cancellation_contract.rs  chat_turn_tests.rs  turn_state_machine_hardening.rs
crates/lorum-ai-auth/: Cargo.toml
crates/lorum-ai-auth/examples/: openai_oauth_rig.rs
crates/lorum-ai-auth/src/: bootstrap.rs  callback_listener.rs  credentials.rs  errors.rs  lib.rs  login.rs  oauth.rs  resolver.rs  store.rs
crates/lorum-ai-auth/src/providers/: mod.rs  openai_codex.rs
crates/lorum-ai-auth/tests/: auth_resolver_tests.rs  bootstrap_tests.rs  callback_listener_tests.rs  live_smoke.rs
crates/lorum-ai-connectors/: Cargo.toml
crates/lorum-ai-connectors/src/: anthropic.rs  codex.rs  interfaces.rs  lib.rs  openai_responses.rs  runtime_catalog.rs  shared.rs
crates/lorum-ai-connectors/tests/: adapter_tests.rs  catalog_tests.rs  live_smoke.rs
crates/lorum-ai-contract/: Cargo.toml
crates/lorum-ai-contract/src/: lib.rs
crates/lorum-ai-contract/tests/: contract_tests.rs
crates/lorum-ai-models/: Cargo.toml
crates/lorum-ai-models/src/: lib.rs
crates/lorum-ai-models/tests/: model_manager_tests.rs
crates/lorum-ai-testkit/: Cargo.toml
crates/lorum-ai-testkit/fixtures/: error_stream.json  simple_text.json  tool_use.json
crates/lorum-ai-testkit/src/: lib.rs
crates/lorum-ai-testkit/tests/: testkit_tests.rs
crates/lorum-domain/: Cargo.toml
crates/lorum-domain/src/: lib.rs
crates/lorum-domain/tests/: event_order_tests.rs
crates/lorum-runtime/: Cargo.toml
crates/lorum-runtime/examples/: temp_chat.rs
crates/lorum-runtime/src/: agents.rs  lib.rs  subagent.rs
crates/lorum-runtime/tests/: chat_turn_parity.rs  runtime_tests.rs
crates/lorum-session/: Cargo.toml
crates/lorum-session/src/: lib.rs
crates/lorum-session/tests/: chat_replay_restore.rs  session_store_tests.rs
crates/lorum-tools/: Cargo.toml
crates/lorum-tools/src/: cid.rs  lib.rs
crates/lorum-tools/src/tools/: ask.rs  ast_edit.rs  ast_grep.rs  await_tool.rs  bash.rs  browser.rs  calculator.rs  cancel_job.rs  checkpoint.rs  exit_plan_mode.rs  fetch.rs  find.rs  gemini_image.rs  grep.rs  hashline.rs  mod.rs  patch.rs  read.rs  render_mermaid.rs  replace.rs  resolve.rs  rewind.rs  ssh.rs  submit_result.rs  task.rs  todo_write.rs  web_search.rs  write.rs
crates/lorum-tools/tests/: ast_edit_test.rs  ast_grep_test.rs  bash_test.rs  calculator_test.rs  cid_tests.rs  fetch_test.rs  find_test.rs  grep_test.rs  hashline_test.rs  hashline_tests.rs  patch_test.rs  patch_tests.rs  read_test.rs  replace_test.rs  ssh_test.rs  todo_write_test.rs  write_test.rs
crates/lorum-tui/: Cargo.toml
crates/lorum-tui/src/: commands.rs  deps.rs  input.rs  lib.rs  main.rs  render.rs  subscriber.rs
crates/lorum-tui/tests/: command_tests.rs
crates/lorum-ui-core/: Cargo.toml
crates/lorum-ui-core/src/: lib.rs
crates/lorum-ui-core/tests/: reducer_order_contract.rs  reducer_session_contract.rs  reducer_terminal_contract.rs  reducer_tests.rs
crates/lorum-ui-print/: Cargo.toml
crates/lorum-ui-print/src/: lib.rs
crates/lorum-ui-print/tests/: print_tests.rs
crates/lorum-ui-rpc/: Cargo.toml
crates/lorum-ui-rpc/src/: lib.rs
crates/lorum-ui-rpc/tests/: envelope_tests.rs
lorum-arch/: 00_INDEX.md  01_SYSTEM_OVERVIEW.md  02_AI_CONNECTORS_AND_AUTH.md  03_TOOL_SYSTEM_AND_RENDERING.md  04_EDITING_AND_PATCHING_ENGINE.md  05_MCP_SKILLS_AND_EXTENSIBILITY.md  06_SUBAGENTS_TASKS_AND_ORCHESTRATION.md  07_TUI_AND_INTERACTION_LAYER.md  08_RUST_TARGET_ARCHITECTURE.md  09_IMPLEMENTATION_ROADMAP.md  10_RISK_REGISTER_AND_PARITY_CHECKLIST.md  11_RUST_CYCLE1_AI_CONNECTORS_PLAN.md  12_CYCLE1_SPEC_LOCK_AND_HARDENING.md  13_PROVIDER_ERROR_MAPPING_COMPAT.md  14_CYCLE1_RC_TEST_REPORT_AND_DEFECT_LEDGER.md  15_AGENTIC_LOOP_FIRST_REPLAN.md  16_PHASE2A_EXECUTION_PLAN.md  17_MODULE_INTERFACE_CONTRACTS_AND_DETAILED_ARCHITECTURE.md  18_PHASE3_TOOL_RUNTIME_EXECUTION_PLAN.md  19_CORE_UI_FIRST_REPLAN.md  20_PHASE2B_AGENT_UI_IMPLEMENTATION_BLUEPRINT.md
