[workspace]
members = [
  "crates/lorum-ai-contract",
  "crates/lorum-ai-testkit",
  "crates/lorum-ai-auth",
  "crates/lorum-ai-models",
  "crates/lorum-ai-connectors",
  "crates/lorum-domain",
  "crates/lorum-session",
  "crates/lorum-agent-core",
  "crates/lorum-ui-core",
  "crates/lorum-ui-print",
  "crates/lorum-ui-rpc",
  "crates/lorum-runtime",
  "crates/lorum-tui",
  "crates/lorum-tools",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Oh My Pi Team"]

[workspace.dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
sha2 = "0.10.9"
hex = "0.4.3"
rusqlite = { version = "0.32.1", features = ["bundled"] }
tempfile = "3.13.0"
url = "2.5.4"
futures = "0.3.31"
base64 = "0.22.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.31"
reedline = "0.46"
crossterm = "0.29"
termimad = "0.34"
