[package]
name = "lorum-ai-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
url.workspace = true
sha2.workspace = true
base64.workspace = true
futures.workspace = true

[dev-dependencies]
tempfile.workspace = true
lorum-ai-contract = { path = "../lorum-ai-contract" }
lorum-ai-connectors = { path = "../lorum-ai-connectors" }
