[package]
name = "lorum-ai-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
base64.workspace = true
reqwest.workspace = true
tokio.workspace = true
futures-util.workspace = true
lorum-ai-contract = { path = "../lorum-ai-contract" }
lorum-ai-auth = { path = "../lorum-ai-auth" }
lorum-ai-models = { path = "../lorum-ai-models" }

[dev-dependencies]
futures.workspace = true
