[package]
name = "lorum-ai-models"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
async-trait.workspace = true
lorum-ai-contract = { path = "../lorum-ai-contract" }


[dev-dependencies]
futures.workspace = true
tempfile.workspace = true