[package]
name = "lorum-ai-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
lorum-ai-contract = { path = "../lorum-ai-contract" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
serde_json.workspace = true
