[package]
name = "lorum-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process", "fs", "io-util", "time"] }
glob = "0.3"
regex = "1"
ignore = "0.4"
reqwest = { workspace = true }
lorum-ai-contract = { path = "../lorum-ai-contract" }
lorum-runtime = { path = "../lorum-runtime" }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
